--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -10,10 +10,16 @@
   {{/if}}
 </head>
 <body>
-
-
-  {{{body}}}
-
-
+	<div class="header">
+		<div class="container">
+			Header
+		</div>
+	</div>
+	{{{body}}}
+	<div class="footer">
+		<div class="container">
+			Footer
+		</div>
+	</div>
   </body>
 </html>
